--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <div class="video-control"></div>
       <h1>VIDEO-CONTROLLER</h1>
-      <p class=""><a href="">git repository</a></p>
+      <p class=""><a href="https://github.com/Ram-BRS/video-controller">git repository</a></p>
     </header>
 
     <main role="main" class="container">
